frontend_tests/negative/import_cycle/go.mod
module example.com/renvotests/negative/cycle

go 1.25
